[package]
name = "slapy"
version = "0.0.4"
edition = "2021"
authors = ["der_felix42 (slapy@derfelix.dev)"]
description = "A much faster scapy"
readme = "README.md"
repository = "https://github.com/derfelix42/slapy"
license-file = "LICENSE.txt"

[lib]
name = "slapy"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
